--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body>
 
-	<div class='tableauPlaceholder' id='viz1735430126719' style='position: relative'><noscript><a href='#'><img
+<div class='tableauPlaceholder' id='viz1735472472450' style='position: relative'><noscript><a href='#'><img
 					alt='Dashboard 1 '
 					src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;HR&#47;HR_17352179781800&#47;Dashboard1&#47;1_rss.png'
 					style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
@@ -26,7 +26,7 @@
 			<param name='filter' value='publish=yes' />
 		</object></div>
 	<script
-		type='text/javascript'>                    var divElement = document.getElementById('viz1735430126719'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.minWidth = '1348px'; vizElement.style.maxWidth = '2048px'; vizElement.style.width = '100%'; vizElement.style.height = '1028px'; } else if (divElement.offsetWidth > 500) { vizElement.style.minWidth = '1348px'; vizElement.style.maxWidth = '2048px'; vizElement.style.width = '100%'; vizElement.style.height = '1028px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '4077px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+		type='text/javascript'>                    var divElement = document.getElementById('viz1735472472450'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1748px'; vizElement.style.height = '1028px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1748px'; vizElement.style.height = '1028px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '4277px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
 </body>
 
